--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ nav {
     position: relative;
     z-index: 1;
 }
-.logo {
+.navbar-brand {
     text-decoration: none;
     color: #fff;
     font-size: 30px;
@@ -35,18 +35,13 @@ nav {
     padding-top: 10px;
     padding-left: 10%;
 }
-.nav-links {
+#navbarToggler {
     text-align: right;
     background: var(--buttn);
     padding: 10px 30px;
-    border-bottom-left-radius: 18px;
 }
-.nav-links ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 10px 25px;
-}
-.nav-links ul li a {
+
+#navbarToggler ul li a {
     color: #fff;
     text-decoration: none;
     font-size: 18px;
@@ -72,8 +67,7 @@ nav {
     flex-basis: 40%;
 }
 .left-col img {
-    width: 55%;
-    border-radius: 50%;
+    width: 68%;
     cursor: pointer;
     filter: grayscale(0);
     transition: filter 1s;
@@ -109,11 +103,7 @@ body {
 .sessao2 p {
     padding-top: 10px;
 }
-.formacao {
-    display: inline-block;
-    width: 25%;
-    padding: 20px 10px;
-    margin: 2%;
+#grid {
     text-align: center;
     background: var(--fg);
     color: #fff; 
@@ -133,7 +123,7 @@ aside {
     transition: all 3s, transform 2s;
     position: absolute;
     float: left;
-    height: 320px;
+    height: 420px;
     width: 400px;
     background: #D1D1D1;   
 }
@@ -168,15 +158,7 @@ aside {
     margin: 2%;
     background: #fff;
 }
-.submit-bt {
-    border: 0;
-    outline: none !important;
-    padding: 10px 20px;
-    margin: 2%;
-    background: #2ab0ff;
-    cursor: pointer;
-    color: #fff;
-}
+
 .contato button {
     border: 0;
     outline: none !important;
